Temp fix for wrapping breadcrumb

--- a/src/css/modules/grid-layout.css
+++ b/src/css/modules/grid-layout.css
@@ -49,7 +49,7 @@ main {
     max-height: calc(100% - var(--ui-height));
     width: 100%;
     gap: .5em;
-    padding: .5em;
+    padding: .75em;
     background-color: var(--lighter);
 }
 
